--- a/style.css
+++ b/style.css
@@ -132,3 +132,11 @@ h1, h2 {
     cursor: pointer;
     
 }
+
+
+@media (max-width: 768px) {
+    .header .container {
+        flex-direction: column;
+        margin-bottom: 20px;
+    }
+}
