--- a/style.css
+++ b/style.css
@@ -29,12 +29,14 @@ h1, h2 {
     max-width: 1100px;
     margin: 0 auto;
     padding: 0 30px;
+    
 }
 
 .navbar {
     background-color: #6d8ded;
     color: #fff;
     height: 60px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 } 
 
 .navbar a{
@@ -99,12 +101,6 @@ h1, h2 {
     border-radius: 10px;
 }
 
-.projects {
-    padding-bottom: 20px;
-}
-.projects li {
-    list-style-type:circle
-}
 
 .coding-icons {
     display: flex;
@@ -135,6 +131,11 @@ h1, h2 {
     
 }
 
+footer {
+    background-color: #6d8ded;
+    color: #fff;
+    padding: 40px;
+}
 
 @media (max-width: 768px) {
     .header .container {
@@ -286,5 +287,20 @@ code {
         margin-left: 130px;
         margin-top: 30px;
     }
+ 
+ 
 }
 
+/* Contact page  */
+
+.contact {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; 
+  }
+  
+#contact-h1 {
+    font-size: 4em;
+  }
+  
