Fixed reponsive navbar +minor changes

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    scroll-behavior:smooth;
 }
 
 body {
@@ -14,7 +15,10 @@ body {
     
 }
 
+.logo{
+    font-family: 'Source Code Pro', monospace;
 
+}
 
 ul {
     list-style-type: none;
@@ -37,6 +41,7 @@ h1, h2 {
     color: #fff;
     height: 60px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    
 } 
 
 .navbar a{
@@ -44,6 +49,7 @@ h1, h2 {
     text-decoration: none;
     font-size: 18px;
     font-weight: bold;
+    
 }
 .logo,.navbar a.logo {
     font-size: x-large;
@@ -135,13 +141,6 @@ footer {
     background-color: #6d8ded;
     color: #fff;
     padding: 40px;
-}
-
-@media (max-width: 768px) {
-    .header .container {
-        flex-direction: column;
-        margin-bottom: 20px;
-    }
 }
 
 
@@ -240,15 +239,38 @@ p {
     font-size: 1rem;
   }
 
-code {
+   code {
     color: rgb(217, 214, 214);
     background-color: black;
     border-radius: 0.2rem;
     padding: 4px;
-}
+  }
   /* @media for smaller screens */
 
    @media (max-width: 767px) {
+ 
+    .navbar{
+        height: 120px;
+    }
+     .navbar ul {
+        display:inline;
+        
+    }
+
+    .logo,  a.logo {
+        font-size: larger;
+        font-weight: bold;
+    }
+
+    .navbar a {
+        text-decoration: underline;
+    }
+    .header .container {
+        flex-direction: column;
+        margin-bottom: 20px;
+    }
+   
+   
     #h1-challenges {
       font-size: 30px;
       margin-top: 20px;
@@ -290,17 +312,3 @@ code {
  
  
 }
-
-/* Contact page  */
-
-.contact {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; 
-  }
-  
-#contact-h1 {
-    font-size: 4em;
-  }
-  
